Add try/catch in LoginFragment, RegistrationFragment, ResetPassFragment